--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -364,7 +364,8 @@
    "source": [
     "# Odds ratio for al=1\n",
     "\n",
-    "odds_al1 = pred_al1[0][1] / pred_al1[0][0]"
+    "odds_al1 = pred_al1[0][1] / pred_al1[0][0]\n",
+    "odds_al1"
    ]
   },
   {
@@ -390,7 +391,8 @@
    "source": [
     "# Odds ratio for al=2\n",
     "\n",
-    "odds_al2 = pred_al2[0][1] / pred_al2[0][0]"
+    "odds_al2 = pred_al2[0][1] / pred_al2[0][0]\n",
+    "odds_al2"
    ]
   },
   {
@@ -424,8 +426,8 @@
    "outputs": [],
    "source": [
     "# compute predicted log-odds for al=2 using the equation\n",
-    "\n",
-    "logodds = logreg.intercept_ + logreg.coef_[0] * 2\n",
+    "x_al = 2\n",
+    "logodds = logreg.intercept_ + logreg.coef_[0] * x_al\n",
     "logodds"
    ]
   },
