Minor typo on regularization factor C

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -651,7 +651,7 @@
    "outputs": [],
    "source": [
     "my_model = LogisticRegression(\n",
-    "            C=1e3,             # Higher the value, more regularization\n",
+    "            C=1e3,             # Smaller values -> more regularization\n",
     "            max_iter=1e3,      # Ensure we eventually reach a solution\n",
     "            solver='lbfgs',    # (Default) Can optimize depending on problem\n",
     "            multi_class='auto' # (Default) Will try to do multiclass classification \n",
